--- a/GongYunTong/Info.plist
+++ b/GongYunTong/Info.plist
@@ -63,17 +63,17 @@
 		<true/>
 	</dict>
 	<key>NSBluetoothPeripheralUsageDescription</key>
-	<string>工运通需要访问蓝牙以连接手环</string>
+	<string>V健康+需要访问蓝牙以连接手环</string>
 	<key>NSCalendarsUsageDescription</key>
-	<string>工运通需要访问日历</string>
+	<string>V健康+需要访问日历</string>
 	<key>NSCameraUsageDescription</key>
 	<string>拍摄您的头像</string>
 	<key>NSContactsUsageDescription</key>
-	<string>工运通需要访问通讯录</string>
+	<string>V健康+需要访问通讯录</string>
 	<key>NSHealthShareUsageDescription</key>
-	<string>工运通需要访问健康分享</string>
+	<string>V健康+需要访问健康分享</string>
 	<key>NSHealthUpdateUsageDescription</key>
-	<string>工运通需要健康更新</string>
+	<string>V健康+需要健康更新</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>活动签到需要地理位置</string>
 	<key>NSMicrophoneUsageDescription</key>
