--- a/GongYunTong/Info.plist
+++ b/GongYunTong/Info.plist
@@ -23,7 +23,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.26</string>
+	<string>1.29</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleURLTypes</key>
@@ -75,7 +75,7 @@
 	<key>NSHealthUpdateUsageDescription</key>
 	<string>V健康+需要健康更新</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>活动签到需要地理位置</string>
+	<string>V健康+需要获取当前地理位置</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>V健康+访问你的电话</string>
 	<key>NSMotionUsageDescription</key>
