--- a/GongYunTong/Info.plist
+++ b/GongYunTong/Info.plist
@@ -23,7 +23,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.311</string>
+	<string>1.32</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleURLTypes</key>
@@ -52,7 +52,7 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>1.271</string>
+	<string>12</string>
 	<key>LSApplicationCategoryType</key>
 	<string></string>
 	<key>LSRequiresIPhoneOS</key>
@@ -77,7 +77,7 @@
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>V健康+需要获取当前地理位置</string>
 	<key>NSMicrophoneUsageDescription</key>
-	<string>V健康+访问你的电话</string>
+	<string>若不允许，将无法发送语音消息</string>
 	<key>NSMotionUsageDescription</key>
 	<string>否则无法正常计步</string>
 	<key>NSPhotoLibraryUsageDescription</key>
