--- a/GongYunTong/VJianKangPlusYDSN-Info.plist
+++ b/GongYunTong/VJianKangPlusYDSN-Info.plist
@@ -23,7 +23,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.39</string>
+	<string>1.391</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleURLTypes</key>
@@ -92,15 +92,15 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
-	<key>UserTypeUrlSechemes</key>
-	<string>YDSNUrlSechemeType</string>
-	<key>UserTypeBPushAPPKey</key>
-	<string>hvMRNsPecLmBpWWG3np44KoG</string>
-	<key>UserTypeRCIMAPPKEY</key>
-	<string>lmxuhwaglmf6d</string>
 	<key>UserTypeBMobAPPKey</key>
 	<string>a3bd4374ec</string>
 	<key>UserTypeBMobChannelId</key>
 	<string>vhs_ydsn_01</string>
+	<key>UserTypeBPushAPPKey</key>
+	<string>hvMRNsPecLmBpWWG3np44KoG</string>
+	<key>UserTypeRCIMAPPKEY</key>
+	<string>x4vkb1qpx012k</string>
+	<key>UserTypeUrlSechemes</key>
+	<string>YDSNUrlSechemeType</string>
 </dict>
 </plist>
